Fix event listener type for background color input change fix stretch not in use on safari

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,7 @@
 }
 
 .range {
+    width: -webkit-fill-available;
     width: stretch;
 }
 
